fixes replay url bar size on mobile

--- a/frontend/src/components/controls/ReplayURLBar/style.scss
+++ b/frontend/src/components/controls/ReplayURLBar/style.scss
@@ -57,3 +57,20 @@
 
     background: linear-gradient(90deg, rgba(255,255,255,0), #FFF 15%, #FFF);
 }
+
+@media(max-width:768px){
+    .wr-controls:not(.public) .main-bar{
+        flex-basis: 50%;
+    }
+    .main-bar {
+        display: inline-block;
+        width: 50%;
+       //  flex-grow: 1;
+       // -ms-flex: 30%;
+
+       & > form > .input-group {
+        width: 100%;
+       }
+    }
+
+}
